/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -42,12 +42,16 @@ To see that $f$ is not uniformly continuous when $c=0$:
 Concepts used:
 
 - Definition of measurability: there exists an open $O\supset E$ such that $m_*(O\setminus E) < \eps$ for all $\eps> 0$.
+- Theorem: $E$ is Lebesgue measurable iff there exists a closed set $F\subseteq E$ such that $m_*(E\setminus F) < \eps$ for all $\eps>0$.
+- Every $F_\sigma, G_\delta$ is Borel.
 
 First consider the bounded case where $m(E) < \infty$.
 
-- Definition: $E$ is measurable $\iff$ for every $\varepsilon$ there exist $F_\varepsilon \subset E \subset G_\varepsilon$ with $F_\varepsilon$ closed and $G_\varepsilon$ open and $m(G_\varepsilon \setminus E)< \varepsilon$ and $m(E\setminus F_\varepsilon) < \varepsilon$.
+- Claim: $E$ is measurable $\iff$ for every $\varepsilon$ there exist $F_\varepsilon \subset E \subset G_\varepsilon$ with $F_\varepsilon$ closed and $G_\varepsilon$ open and $m(G_\varepsilon \setminus E)< \varepsilon$ and $m(E\setminus F_\varepsilon) < \varepsilon$.
+  - Proof: ?
 
-So take the sequence $\varepsilon_n = \frac 1 n \to 0$ to produce a sequence of closed sets $F_n$ such that $m(E\setminus F_n) < \frac 1 n$ for all $n$, and let $F \definedas \union_{n}$, which is clear an $F_\sigma$ and thus Borel set.
+- Take the sequence $\varepsilon_n = \frac 1 n \to 0$ to produce a sequence of closed sets $F_n$ such that $m(E\setminus F_n) < \frac 1 n$ for all $n$
+- Let $F \definedas \union_{n}$, which is a union of closed sets and thus $F_\sigma$, and thus a Borel.
 
 Since $F_n \subseteq F_{n+1}$, we have $F_n \nearrow F$ and so by continuity of measure,
 \begin{align*}
