--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -50,19 +50,22 @@ First consider the bounded case where $m(E) < \infty$.
 - Claim: $E$ is measurable $\iff$ for every $\varepsilon$ there exist $F_\varepsilon \subset E \subset G_\varepsilon$ with $F_\varepsilon$ closed and $G_\varepsilon$ open and $m(G_\varepsilon \setminus E)< \varepsilon$ and $m(E\setminus F_\varepsilon) < \varepsilon$.
   - Proof: ?
 
-- Take the sequence $\varepsilon_n = \frac 1 n \to 0$ to produce a sequence of closed sets $F_n$ such that $m(E\setminus F_n) < \frac 1 n$ for all $n$
-- Let $F \definedas \union_{n}$, which is a union of closed sets and thus $F_\sigma$, and thus a Borel.
+- Take the sequence $\varepsilon_n = \frac 1 n \to 0$ to produce a sequence of closed sets $F_n$ such that $$m(E\setminus F_n) < \frac 1 n \qtext{for all} n.$$
+- Let $F \definedas \union_{n=1}^\infty F_n$, which is a union of closed sets and thus $F_\sigma$, and thus a Borel.
 
-Since $F_n \subseteq F_{n+1}$, we have $F_n \nearrow F$ and so by continuity of measure,
+- Note $F_n \subseteq F_{n+1}$, we have $F_n \nearrow F$
+- By continuity of measure,
 \begin{align*}
 m(F) = \lim_n m(F_n) < \lim_n \left( \frac 1 n\right) \to 0
 .\end{align*}
 
-If $E$ is not bounded, let $E_N = B_N(0) \intersect E$ which is bounded. 
-Then $E_N \nearrow E$, and for each $N$ we can find an $F_N$ by the previous case such that $m(E_N \setminus F_N) = 0$.
+If $E$ is not bounded:
 
-So take $F \definedas \union_N F_N$ so $F_N \nearrow F$.
-Then 
+- Let $E_N = B_N(0) \intersect E$ which is bounded. 
+- Note $E_N \nearrow E$, and for each $N$ we can find an $F_N$ by the previous case such that $m(E_N \setminus F_N) = 0$.
+
+- Define $F \definedas \union_N F_N$ so $F_N \nearrow F$.
+- Then 
 $$
 E_N \setminus F_N \nearrow E\setminus F \implies m(E\setminus F) = \lim_N m(E_N\setminus F_N) = 0
 .$$
