/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -50,13 +50,13 @@ First consider the bounded case where $m(E) < \infty$.
 - Claim: $E$ is measurable $\iff$ for every $\varepsilon$ there exist $F_\varepsilon \subset E \subset G_\varepsilon$ with $F_\varepsilon$ closed and $G_\varepsilon$ open and $m(G_\varepsilon \setminus E)< \varepsilon$ and $m(E\setminus F_\varepsilon) < \varepsilon$.
   - Proof: ?
 
-- Take the sequence $\varepsilon_n = \frac 1 n \to 0$ to produce a sequence of closed sets $F_n$ such that $$m(E\setminus F_n) < \frac 1 n \qtext{for all} n.$$
-- Let $F \definedas \union_{n=1}^\infty F_n$, which is a union of closed sets and thus $F_\sigma$, and thus a Borel.
+- Take the sequence $\varepsilon_j = \frac 1 j \to 0$ to produce a sequence of closed sets $F_j$ such that $$m(E\setminus F_j) < \frac 1 j \qtext{for all} j\geq 1.$$
+- Let $F_n \definedas \union_{j=1}^n F_j$, which is a union of closed sets and thus $F_\sigma$, and thus a Borel.
 
 - Note $F_n \subseteq F_{n+1}$, we have $F_n \nearrow F$
 - By continuity of measure,
 \begin{align*}
-m(F) = \lim_n m(F_n) < \lim_n \left( \frac 1 n\right) \to 0
+m(F) = \lim_{n\to\infty} m(F_n) < \lim_{n\to\infty } \left( \frac 1 n\right) \to 0
 .\end{align*}
 
 If $E$ is not bounded:
