/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -56,7 +56,7 @@ First consider the bounded case where $m(E) < \infty$.
 - Note $F_n \subseteq F_{n+1}$, we have $F_n \nearrow F$
 - By continuity of measure,
 \begin{align*}
-m(F) = \lim_{n\to\infty} m(F_n) < \lim_{n\to\infty } \left( \frac 1 n\right) \to 0
+m(F) = \lim_{n\to\infty} m(F_n) < \lim_n \left( \frac 1 n\right) \to 0
 .\end{align*}
 
 If $E$ is not bounded:
