/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -44,31 +44,20 @@ Concepts used:
 - Definition of measurability: there exists an open $O\supset E$ such that $m_*(O\setminus E) < \eps$ for all $\eps> 0$.
 - Theorem: $E$ is Lebesgue measurable iff there exists a closed set $F\subseteq E$ such that $m_*(E\setminus F) < \eps$ for all $\eps>0$.
 - Every $F_\sigma, G_\delta$ is Borel.
-
-First consider the bounded case where $m(E) < \infty$.
-
 - Claim: $E$ is measurable $\iff$ for every $\varepsilon$ there exist $F_\varepsilon \subset E \subset G_\varepsilon$ with $F_\varepsilon$ closed and $G_\varepsilon$ open and $m(G_\varepsilon \setminus E)< \varepsilon$ and $m(E\setminus F_\varepsilon) < \varepsilon$.
   - Proof: ?
 
-- Take the sequence $\varepsilon_j = \frac 1 j \to 0$ to produce a sequence of closed sets $F_j$ such that $$m(E\setminus F_j) < \frac 1 j \qtext{for all} j\geq 1.$$
-- Let $F_n \definedas \union_{j=1}^n F_j$, which is a union of closed sets and thus $F_\sigma$, and thus a Borel.
+### Indirect Proof
 
-- Note $F_n \subseteq F_{n+1}$, we have $F_n \nearrow F$
-- By continuity of measure,
-\begin{align*}
-m(F) = \lim_{n\to\infty} m(F_n) < \lim_n \left( \frac 1 n\right) \to 0
-.\end{align*}
+- Since $E$ is measurable, $E^c$ is measurable
+- Thus there exists an open $O\supseteq E^c$ such that $m_*(O\setminus E_c) < \eps$.
+- Set $F = O^c$, then $m_*(E\setminus F) = m_*(E\setminus O^c) = m_*(O\setminus E^c) < \eps$
 
-If $E$ is not bounded:
 
-- Let $E_N = B_N(0) \intersect E$ which is bounded. 
-- Note $E_N \nearrow E$, and for each $N$ we can find an $F_N$ by the previous case such that $m(E_N \setminus F_N) = 0$.
+### Direct Proof
 
-- Define $F \definedas \union_N F_N$ so $F_N \nearrow F$.
-- Then 
-$$
-E_N \setminus F_N \nearrow E\setminus F \implies m(E\setminus F) = \lim_N m(E_N\setminus F_N) = 0
-.$$
+? \todo{Try to construct the set.}
+
 
 ## 3
 
