/ ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -68,11 +68,10 @@ Concepts used:
 &\overset{DCT}= \int_\RR f(x) \dd{}{t} \cos(xt) ~dx \\
 &= \int_\RR xf(x) \cos(xt)~dx
 ,\end{align*}
-
 so it only remains to justify the DCT.
 
-Fix $t$, then let $t_n \to t$ be any sequence.
-Then
+- Fix $t$, then let $t_n \to t$ be arbitrary.
+- Then
 \begin{align*}
 \dd{}{t} \cos(tx) 
 &\definedas \lim_{t_n \to t} \frac{\cos(tx) - \cos(t_n x)}{t_n - t} \\
@@ -80,15 +79,16 @@ Then
 &= x\sin(\xi_n x)
 .\end{align*}
 
-So we can define 
+- So define 
 $$
 h_n(x, t) = f(x)
 \left(\frac{\cos(tx) - \cos(t_n x)}{t_n - t}\right)
 $$
 
-and note that $h_n \to \dd{}{t} \left[ f(x) \cos(xt) \right]$ pointwise.
+- Note that $h_n \to \dd{}{t} \left[ f(x) \cos(xt) \right]$ pointwise.
 
-We then have $\abs{h_n} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}$ for every $n$ by the above argument, and since $g(x) \definedas xf(x) \in L^1(\RR)$ by assumption, the DCT can be applied.
+- We then have $\abs{h_n} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}$ for every $n$ by the above argument
+- Since $g(x) \definedas xf(x) \in L^1(\RR)$ by assumption, the DCT can be applied.
 
 ## 4
 
