/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -75,7 +75,7 @@ so it only remains to justify the DCT.
 \begin{align*}
 \dd{}{t} \cos(tx) 
 &\definedas \lim_{t_n \to t} \frac{\cos(tx) - \cos(t_n x)}{t_n - t} \\
-&\overset{MVT} = \dd{}{t}\cos(tx)\mid_{t  = \xi_n} \quad \text{for some } \xi_n \in [t, t_n] \text{ or } [t_n, t] \\
+&\overset{MVT} = \dd{}{t}\cos(tx)\mid_{t  = \xi_n} \hspace{6em} \text{for some } \xi_n \in [t, t_n] \text{ or } [t_n, t] \\
 &= x\sin(\xi_n x)
 .\end{align*}
 
