/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -62,6 +62,11 @@ Concepts used:
 
 ## 3
 
+Concepts used:
+
+-  Mean Value Theorem
+- DCT
+
 \begin{align*}
 \dd{}{t} F(t) 
 &= \dd{}{t} \int_\RR f(x) \cos(xt) ~dx \\
@@ -85,9 +90,9 @@ h_n(x, t) = f(x)
 \left(\frac{\cos(tx) - \cos(t_n x)}{t_n - t}\right)
 $$
 
-- Note that $h_n \to \dd{}{t} \left[ f(x) \cos(xt) \right]$ pointwise.
+- Note that $h_n \to \dd{}{t} \qty{ f(x) \cos(xt) }$ pointwise.
 
-- We then have $\abs{h_n} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}$ for every $n$ by the above argument
+- We then have $$\abs{h_n} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}$$ for every $n$ by the above argument
 - Since $g(x) \definedas xf(x) \in L^1(\RR)$ by assumption, the DCT can be applied.
 
 ## 4
