/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -92,8 +92,8 @@ $$
 
 - Note that $h_n \to \dd{}{t} \qty{ f(x) \cos(xt) }$ pointwise.
 
-- We then have $$\abs{h_n} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}$$ for every $n$ by the above argument
-- Since $g(x) \definedas xf(x) \in L^1(\RR)$ by assumption, the DCT can be applied.
+- We then have $$\abs{h_n(x)} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}$$ for every $x$ and every $n$ by the above argument
+- Since $xf(x) \in L^1(\RR)$ by assumption, the DCT can be applied.
 
 ## 4
 
