/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -76,7 +76,13 @@ Concepts used:
 so it only remains to justify the DCT.
 
 - Fix $t$, then let $t_n \to t$ be arbitrary.
-- Then
+- Define 
+$$
+h_n(x, t) = f(x)
+\left(\frac{\cos(tx) - \cos(t_n x)}{t_n - t}\right) \converges{n\to\infty}\to \dd{}{t} \qty{f(x) \cos(xt)}
+$$
+
+- Note that
 \begin{align*}
 \dd{}{t} \cos(tx) 
 &\definedas \lim_{t_n \to t} \frac{\cos(tx) - \cos(t_n x)}{t_n - t} \\
@@ -84,15 +90,8 @@ so it only remains to justify the DCT.
 &= x\sin(\xi_n x)
 .\end{align*}
 
-- So define 
-$$
-h_n(x, t) = f(x)
-\left(\frac{\cos(tx) - \cos(t_n x)}{t_n - t}\right)
-$$
 
-- Note that $h_n \to \dd{}{t} \qty{ f(x) \cos(xt) }$ pointwise.
-
-- We then have $$\abs{h_n(x)} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}$$ for every $x$ and every $n$ by the above argument
+- We then have $$\abs{h_n(x)} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}\quad\text{since} \abs{\sin(\xi_n x)} \leq  1$$ for every $x$ and every $n$ by the above argument
 - Since $xf(x) \in L^1(\RR)$ by assumption, the DCT can be applied.
 
 ## 4
