/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -81,6 +81,7 @@ $$
 h_n(x, t) = f(x)
 \left(\frac{\cos(tx) - \cos(t_n x)}{t_n - t}\right) \converges{n\to\infty}\to \dd{}{t} \qty{f(x) \cos(xt)}
 $$
+ where the convergence occurs because $\cos(tx)$ is differentiable in $t$.
 
 - Note that
 \begin{align*}
@@ -88,10 +89,10 @@ $$
 &\definedas \lim_{t_n \to t} \frac{\cos(tx) - \cos(t_n x)}{t_n - t} \\
 &\overset{MVT} = \dd{}{t}\cos(tx)\mid_{t  = \xi_n} \hspace{6em} \text{for some } \xi_n \in [t, t_n] \text{ or } [t_n, t] \\
 &= x\sin(\xi_n x)
-.\end{align*}
+\end{align*}
+  where $\xi_n \converges{n\to\infty}\to t$ since wlog $t_n \leq \xi_n \leq t$ and $t_n \nearrow t$.
 
-
-- We then have $$\abs{h_n(x)} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}\quad\text{since} \abs{\sin(\xi_n x)} \leq  1$$ for every $x$ and every $n$ by the above argument
+- We then have $$\abs{h_n(x)} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}\quad\text{since} \abs{\sin(\xi_n x)} \leq  1$$ for every $x$ and every $n$.
 - Since $xf(x) \in L^1(\RR)$ by assumption, the DCT can be applied.
 
 ## 4
