/ ‘Algebra/UGA Solutions/Algebra_Qual_Solutions.pdf’ / ‘Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md’

--- a/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
+++ b/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
@@ -36,7 +36,9 @@ $\implies$:
 
 $\impliedby$
 
-- ?
+- Suppose $f$ is reducible, then we will produce a proper $T\dash$invariant subspace.
+- Claim: if $f$ is reducible, there exists a nonzero, noncyclic vector $\vector v$.
+- Then $\spanof_k\theset{T^j\vector v}_{j=1}^d$ is a $T\dash$invariant subspace that is nonzero, and not the entire space since $\vector v$ is not cyclic.
 
 ### b
 
