/ ‘Algebra/Review Doc/sections/50_Linear Algebra.md’

--- a/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
+++ b/Algebra/UGA Solutions/sections/2020-07-02 Spring 2013.md
@@ -4,6 +4,10 @@
 
 Lemma: every $\vector v\in V$ is $T\dash$cyclic $\iff \chi_T(x)/\kk$ is irreducible.
 
+- $\implies$: Same as argument below.
+- $\impliedby$: Suppose $f$ is irreducible, then $f$ is equal to the minimal polynomial of $T$.
+- 
+
 ### a
 
 Let $f$ be the characteristic polynomial of $T$.
