/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -8,9 +8,13 @@ Concepts used:
 
 Show a stronger statement: $f(x) = \frac 1 x$ is uniformly continuous on any interval of the form $(c, \infty)$ where $c > 0$.
 
-- Use that fact that $x, y > c \implies xy > c^2 \implies \frac{1}{xy} < \frac 1 {c^{2}}$.
+- Note that
+$$
+\abs{x}, \abs y > c > 0 \implies \abs{xy} = \abs{x}\abs{y} > c^2 \implies \frac{1}{\abs{xy}} < \frac 1 {c^{2}}
+.$$
 
 - Letting $\varepsilon$ be arbitrary, choose $\delta < \varepsilon c^2$.
+ - Note that $\delta$ does not depend on $x, y$.
 - Then
 \begin{align*}
 \abs{f(x) - f(y)}
@@ -20,13 +24,13 @@ Show a stronger statement: $f(x) = \frac 1 x$ is uniformly continuous on any int
 &< \frac{\delta}{c^2} \\
 &< \varepsilon
 ,\end{align*}
-  which shows uniform continuity since $\delta$ does not depend on $x$ or $y$.
+  which shows uniform continuity.
 
 To see that $f$ is not uniformly continuous when $c=0$:
 
 > Note: negating uniform continuity says $\exists \eps > 0$ such that $\forall \delta(\eps)$ there exist $x, y$ such that $\abs{x-y} < \delta$ *and* $\abs{f(x) - f(y)} > \eps$.
 
-- Let $\varepsilon < 1$ .
+- Let $\varepsilon < 1$.
 - Let $x_n = \frac 1 n$ for $n\geq 1$.
 - Choose $n$ large enough such that $\abs{x_n - x_{n+1}} = \frac 1 n - \frac 1 {n+1} < \delta$.
   - Why this can be done: by the archimedean property of $\RR$, choose $n$ such that ${1\over n} < \eps$.
@@ -36,6 +40,7 @@ To see that $f$ is not uniformly continuous when $c=0$:
   .\end{align*}
 - Note $f(x_n) = n$ and thus $$\abs{f(x_n) - f(x_{n+1})} = n - (n+1) = 1 > \varepsilon.$$
 
+$\qed$
 
 ## 2
 
