/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -55,7 +55,11 @@ Concepts used:
 
 ### Indirect Proof
 
-- Since $E$ is measurable, $E^c$ is measurable
+- Claim: since $E$ is measurable, $E^c$ is measurable
+  - Proof: It suffices to write $E^c$ as the union of two measurable sets, $E^c = S \union (E^c - S)$, where $S$ is to be determined.
+  - We'll produce an $S$ such that $m_*(E^c - S) = 0$ and use the fact that any subset of a null set is measurable.
+  - Since $E$ is measurable, for every $\eps > 0$ there exists $\OO_\eps \supseteq E$ such that $m_*(\OO_\eps \setminus E) < \eps$.
+  - Take the sequence $\theset{\eps_n \definedas {1\over n}}$ to produce a sequence of sets $\OO_n$.
 - Thus there exists an open $O\supseteq E^c$ such that $m_*(O\setminus E_c) < \eps$.
 - Set $F = O^c$, then $m_*(E\setminus F) = m_*(E\setminus O^c) = m_*(O\setminus E^c) < \eps$
 
