--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -58,8 +58,19 @@ Concepts used:
 - Claim: since $E$ is measurable, $E^c$ is measurable
   - Proof: It suffices to write $E^c$ as the union of two measurable sets, $E^c = S \union (E^c - S)$, where $S$ is to be determined.
   - We'll produce an $S$ such that $m_*(E^c - S) = 0$ and use the fact that any subset of a null set is measurable.
-  - Since $E$ is measurable, for every $\eps > 0$ there exists $\OO_\eps \supseteq E$ such that $m_*(\OO_\eps \setminus E) < \eps$.
+  - Since $E$ is measurable, for every $\eps > 0$ there exists an open $\OO_\eps \supseteq E$ such that $m_*(\OO_\eps \setminus E) < \eps$.
   - Take the sequence $\theset{\eps_n \definedas {1\over n}}$ to produce a sequence of sets $\OO_n$.
+  - Note that each $\OO_n^c$ is closed and 
+  \begin{align*}
+  \OO_n \supseteq E \iff \OO_n^c \subseteq E^c
+  .\end{align*}
+  - Set $S \definedas \union_n \OO_n$, which is a union of closed sets, thus an $F_\sigma$ set, thus Borel, thus measurable.
+  - Note that $S\subseteq E^c$ since each $\OO_n \subseteq E^c$.
+  - Note that
+  \begin{align*}
+m_*(E^c\setminus S)
+  .\end{align*}
+  - Then $m_*()$
 - Thus there exists an open $O\supseteq E^c$ such that $m_*(O\setminus E_c) < \eps$.
 - Set $F = O^c$, then $m_*(E\setminus F) = m_*(E\setminus O^c) = m_*(O\setminus E^c) < \eps$
 
