/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -64,11 +64,11 @@ Concepts used:
   \begin{align*}
   \OO_n \supseteq E \iff \OO_n^c \subseteq E^c
   .\end{align*}
-  - Set $S \definedas \union_n \OO_n$, which is a union of closed sets, thus an $F_\sigma$ set, thus Borel, thus measurable.
+  - Set $S \definedas \union_n \OO_n^c$, which is a union of closed sets, thus an $F_\sigma$ set, thus Borel, thus measurable.
   - Note that $S\subseteq E^c$ since each $\OO_n \subseteq E^c$.
   - Note that
   \begin{align*}
-m_*(E^c\setminus S)
+E^c\setminus S \definedas E\setminus \union_{n=1}^\infty \OO_n^c \definedas E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c = \qty{E \union \qty{\intersect_{n=1}^\infty \OO_n} }
   .\end{align*}
   - Then $m_*()$
 - Thus there exists an open $O\supseteq E^c$ such that $m_*(O\setminus E_c) < \eps$.
