/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -68,7 +68,11 @@ Concepts used:
   - Note that $S\subseteq E^c$ since each $\OO_n \subseteq E^c$.
   - Note that
   \begin{align*}
-  E^c\setminus S &\definedas E^c \setminus \union_{n=1}^\infty \OO_n^c \definedas E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c = \qty{E^c \union \qty{\intersect_{n=1}^\infty \OO_n} } \definedas \qty{ \intersect_{n=1}^\infty \OO_n} \setminus E
+  E^c\setminus S 
+  &\definedas E^c \setminus \union_{n=1}^\infty \OO_n^c \\
+  \definedas E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c  \\
+  = \qty{E^c \union \qty{\intersect_{n=1}^\infty \OO_n} }  \\
+  \definedas \qty{ \intersect_{n=1}^\infty \OO_n} \setminus E
   .\end{align*}
   - Then $m_*()$
 - Thus there exists an open $O\supseteq E^c$ such that $m_*(O\setminus E_c) < \eps$.
