--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -70,9 +70,10 @@ Concepts used:
   \begin{align*}
   E^c\setminus S 
   &\definedas E^c \setminus \union_{n=1}^\infty \OO_n^c \\
-  \definedas E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c  \\
-  = \qty{E^c \union \qty{\intersect_{n=1}^\infty \OO_n} }  \\
-  \definedas \qty{ \intersect_{n=1}^\infty \OO_n} \setminus E
+  &\definedas E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c  \quad \text{also using De Morgan's law}\\
+  &= E^c \union \qty{\intersect_{n=1}^\infty \OO_n}  \\
+  &\definedas \qty{ \intersect_{n=1}^\infty \OO_n} \setminus E \\
+  & \subseteq \OO_N \setminus E \quad \text{for every } N\in \NN
   .\end{align*}
   - Then $m_*()$
 - Thus there exists an open $O\supseteq E^c$ such that $m_*(O\setminus E_c) < \eps$.
