--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -70,14 +70,18 @@ Concepts used:
   \begin{align*}
   E^c\setminus S 
   &\definedas E^c \setminus \union_{n=1}^\infty \OO_n^c \\
+  &\definedas E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c  \\ 
   &\definedas E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c  \quad \text{also using De Morgan's law}\\
   &= E^c \union \qty{\intersect_{n=1}^\infty \OO_n}  \\
   &\definedas \qty{ \intersect_{n=1}^\infty \OO_n} \setminus E \\
   & \subseteq \OO_N \setminus E \quad \text{for every } N\in \NN
   .\end{align*}
-  - Then $m_*(E^c\setminus S) \leq m_*(\OO_N \setminus E) \leq {1\over N}$ for every $N$, forcing $m_*(E^c\setminus S) = 0$.
-  - So $E^c\setminus S$ is measurable as desired.
-- Thus there exists an open $O\supseteq E^c$ such that $m_*(O\setminus E_c) < \eps$.
+  - Then 
+    $$
+    m_*(E^c\setminus S) \leq m_*(\OO_N \setminus E) \leq {1\over N} \quad \forall N \implies m_*(E^c\setminus S) = 0
+    .$$
+  - Thus $E^c\setminus S$ is measurable.
+- Since $E^c$ is measurable exists an open $O\supseteq E^c$ such that $m_*(O\setminus E_c) < \eps$.
 - Set $F = O^c$, then $m_*(E\setminus F) = m_*(E\setminus O^c) = m_*(O\setminus E^c) < \eps$
 
 
