+ ‘Real Analysis/UGA Solutions/sections/.temp.pandoc-include’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -70,8 +70,8 @@ Concepts used:
   \begin{align*}
   E^c\setminus S 
   &\definedas E^c \setminus \union_{n=1}^\infty \OO_n^c \\
-  &\definedas E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c  \\ 
-  &\definedas E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c  \quad \text{also using De Morgan's law}\\
+  &\definedas E^c \intersect \qty{\union_{n=1}^\infty \OO_n^c}  \\ 
+  &= E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c  \quad \text{using De Morgan's law}\\
   &= E^c \union \qty{\intersect_{n=1}^\infty \OO_n}  \\
   &\definedas \qty{ \intersect_{n=1}^\infty \OO_n} \setminus E \\
   & \subseteq \OO_N \setminus E \quad \text{for every } N\in \NN
