--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -69,8 +69,8 @@ Concepts used:
   - Note that
   \begin{align*}
   E^c\setminus S 
-  &\definedas E^c \setminus \union_{n=1}^\infty \OO_n^c \\
-  &\definedas E^c \intersect \qty{\union_{n=1}^\infty \OO_n^c}  \\ 
+  &\definedas E^c \setminus \qty{\union_{n=1}^\infty \OO_n^c} \\
+&\definedas E^c \intersect \qty{\union_{n=1}^\infty \OO_n^c}^c  \quad{definition of set minus} \\ 
   &= E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c  \quad \text{using De Morgan's law}\\
   &= E^c \union \qty{\intersect_{n=1}^\infty \OO_n}  \\
   &\definedas \qty{ \intersect_{n=1}^\infty \OO_n} \setminus E \\
