/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ + ‘Real Analysis/UGA Solutions/sections/.temp.pandoc-include’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -70,8 +70,8 @@ Concepts used:
   \begin{align*}
   E^c\setminus S 
   &\definedas E^c \setminus \qty{\union_{n=1}^\infty \OO_n^c} \\
-&\definedas E^c \intersect \qty{\union_{n=1}^\infty \OO_n^c}^c  \quad{definition of set minus} \\ 
-  &= E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c  \quad \text{using De Morgan's law}\\
+&\definedas E^c \intersect \qty{\union_{n=1}^\infty \OO_n^c}^c  \quad\text{definition of set minus} \\ 
+  &= E^c \intersect \qty{\intersect_{n=1}^\infty \OO_n}^c  \quad \text{De Morgan's law}\\
   &= E^c \union \qty{\intersect_{n=1}^\infty \OO_n}  \\
   &\definedas \qty{ \intersect_{n=1}^\infty \OO_n} \setminus E \\
   & \subseteq \OO_N \setminus E \quad \text{for every } N\in \NN
