/ ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -82,7 +82,10 @@ Concepts used:
     .$$
   - Thus $E^c\setminus S$ is measurable.
 - Since $E^c$ is measurable exists an open $O\supseteq E^c$ such that $m_*(O\setminus E_c) < \eps$.
-- Set $F = O^c$, then $m_*(E\setminus F) = m_*(E\setminus O^c) = m_*(O\setminus E^c) < \eps$
+- Set $F = O^c$, then 
+\begin{align*}
+$m_*(E\setminus F) \definedas m_*(E\setminus O^c) = m_*(O\setminus E^c) < \eps$
+.\end{align*}
 
 
 ### Direct Proof
