/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -53,6 +53,13 @@ Concepts used:
   - Proof: existence of $G_\eps$ is the definition of measurability.
   - Existence of $F_\eps$: ?
 
+- Claim: $(A\setminus B)^c = B\setminus A$.
+\begin{align*}
+(A\setminus B)^c 
+\definedas  \qty{A\intersect B^c}^c 
+= A^c \union B 
+.\end{align*}
+
 ### Indirect Proof
 
 - Claim: since $E$ is measurable, $E^c$ is measurable
@@ -81,11 +88,12 @@ Concepts used:
     m_*(E^c\setminus S) \leq m_*(\OO_N \setminus E) \leq {1\over N} \quad \forall N \implies m_*(E^c\setminus S) = 0
     .$$
   - Thus $E^c\setminus S$ is measurable.
-- Since $E^c$ is measurable exists an open $O\supseteq E^c$ such that $m_*(O\setminus E_c) < \eps$.
-- Set $F = O^c$, then 
+- Since $E^c$ is measurable exists an open $O\supseteq E^c$ such that $m_*(O\setminus E_c) = 0$.
+- Set $B \definedas O^c$, then 
 \begin{align*}
-$m_*(E\setminus F) \definedas m_*(E\setminus O^c) = m_*(O\setminus E^c) < \eps$
-.\end{align*}
+E\setminus B \definedas E\setminus  \OO^c \definedas E\intersect (\OO^c)^c = E\intersect \OO = \OO \intersect(E^c)^c \definedas \OO \setminus E^c
+,\end{align*}
+  thus $m(E\setminus B) = m(\OO\setminus E^c) = 0$.
 
 
 ### Direct Proof
