/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -88,7 +88,7 @@ Concepts used:
     m_*(E^c\setminus S) \leq m_*(\OO_N \setminus E) \leq {1\over N} \quad \forall N \implies m_*(E^c\setminus S) = 0
     .$$
   - Thus $E^c\setminus S$ is measurable.
-- Since $E^c$ is measurable exists an open $O\supseteq E^c$ such that $m_*(O\setminus E_c) = 0$.
+- Since $E^c$ is measurable exists an open $O\supseteq E^c$ such that $m(O\setminus E_c) = 0$.
 - Set $B \definedas O^c$, then 
 \begin{align*}
 E\setminus B \definedas E\setminus  \OO^c \definedas E\intersect (\OO^c)^c = E\intersect \OO = \OO \intersect(E^c)^c \definedas \OO \setminus E^c
