--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -53,13 +53,20 @@ Concepts used:
   - Proof: existence of $G_\eps$ is the definition of measurability.
   - Existence of $F_\eps$: ?
 
-- Claim: $(A\setminus B)^c = B\setminus A$.
-\begin{align*}
-(A\setminus B)^c 
-\definedas  \qty{A\intersect B^c}^c 
-= A^c \union B 
-.\end{align*}
-
+- Claim: $E$ is measurable $\implies$ there exists an open $O\supseteq E$ such that $m(O\setminus E) = 0$.
+  - Since $E$ is measurable, for each $n\in \NN$ choose $G_n \supseteq E$ such that $m_*(G_n\setminus E) < {1\over n}$.
+  - Set $O_N \definedas \intersect_{n=1}^N G_n$ and $O\definedas \intersect_{n=1}^\infty G_n$.
+  - Note $O_N \searrow O$ and $m_*(O_1) < \infty$ if $E$ is bounded, since in this case
+  \begin{align*}
+  m_*(G_n\setminus E) = m_*(G_1) - m_*(E) < 1 \iff m_*(G_1) < m_*(E) + {1\over n} < \infty
+  .\end{align*}
+  - Note $O_N \setminus E \searrow O \setminus E$ since $O_N\setminus E \definedas O_N \intersect E^c \supseteq O_{N+1} \intersect E^c$ for all $N$, and again $m_*(O_1 \setminus E) < \infty$.
+  - So it's valid to apply continuity of measure from above:
+  \begin{align*}
+  m_*(O\setminus E) = \lim_{N\to\infty} m_*(O_N\setminus E) \leq \lim_{N\to \infty} m_*(G_N\setminus E) = \lim_{N\to\infty} {1\over N} = 0
+  ,\end{align*}
+    where the inequality uses subadditivity on $\intersect_{n=1}^N G_n \subseteq G_N$
+  
 ### Indirect Proof
 
 - Claim: since $E$ is measurable, $E^c$ is measurable
