/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -63,15 +63,28 @@ Concepts used:
     .\end{align*}
     - Note $O_N \setminus E \searrow O \setminus E$ since $O_N\setminus E \definedas O_N \intersect E^c \supseteq O_{N+1} \intersect E^c$ for all $N$, and again $m_*(O_1 \setminus E) < \infty$.
     - So it's valid to apply continuity of measure from above:
-    \begin{align*}
-    m_*(O\setminus E) = \lim_{N\to\infty} m_*(O_N\setminus E) \leq \lim_{N\to \infty} m_*(G_N\setminus E) = \lim_{N\to\infty} {1\over N} = 0
-    ,\end{align*}
+\begin{align*}
+m_*(O\setminus E) 
+&= \lim_{N\to\infty} m_*(O_N\setminus E) \\ 
+&\leq \lim_{N\to \infty} m_*(G_N\setminus E) \\ 
+&= \lim_{N\to\infty} {1\over N} = 0
+,\end{align*}
       where the inequality uses subadditivity on $\intersect_{n=1}^N G_n \subseteq G_N$
   - Suppose $E$ is unbounded.
     - Write $E^k = E \intersect [k, k+1]^d \subset \RR^d$ as the intersection of $E$ with an annulus, and note that $E = \disjoint_{k\in \NN} E_k$.
     - Each $E_k$ is bounded, so apply the previous case to obtain $O_k \supseteq E_k$ with $m(O_k\setminus E_k) = 0$.
     - So write $O_k = E_k \disjoint N_k$ where $N_k \definedas O_k \setminus E_k$ is a null set.
     - Define $O = \union_{k\in \NN} O_k$, note that $E\subseteq O$.
+    - Now note
+\begin{align*}
+O\setminus E 
+&= \qty{\disjoint_k O_k}\setminus \qty{\disjoint_K E_k} \\
+&\subseteq \disjoint_k \qty{O_k \setminus E_k} \\
+\implies m_*(O\setminus E) 
+&\leq m_*\qty{\disjoint \qty{O_k \setminus E_k} } = 0
+,\end{align*}
+  since any countable union of null sets is again null.
+  - So $O\supseteq E$ with $m(O\setminus E) = 0$.
   
 ### Indirect Proof
 
