/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -85,10 +85,7 @@ O\setminus E
 ,\end{align*}
   since any countable union of null sets is again null.
   - So $O\supseteq E$ with $m(O\setminus E) = 0$.
-  
-### Indirect Proof
-
-- Claim: since $E$ is measurable, $E^c$ is measurable
+- Theorem: since $E$ is measurable, $E^c$ is measurable
   - Proof: It suffices to write $E^c$ as the union of two measurable sets, $E^c = S \union (E^c - S)$, where $S$ is to be determined.
   - We'll produce an $S$ such that $m_*(E^c - S) = 0$ and use the fact that any subset of a null set is measurable.
   - Since $E$ is measurable, for every $\eps > 0$ there exists an open $\OO_\eps \supseteq E$ such that $m_*(\OO_\eps \setminus E) < \eps$.
@@ -114,8 +111,13 @@ O\setminus E
     m_*(E^c\setminus S) \leq m_*(\OO_N \setminus E) \leq {1\over N} \quad \forall N \implies m_*(E^c\setminus S) = 0
     .$$
   - Thus $E^c\setminus S$ is measurable.
-- Since $E^c$ is measurable exists an open $O\supseteq E^c$ such that $m(O\setminus E_c) = 0$.
-- Set $B \definedas O^c$, then 
+  
+### Indirect Proof
+
+- Since $E$ is measurable, $E^c$ is measurable.
+- Since $E^c$ is measurable exists an open $O\supseteq E^c$ such that $m(O\setminus E^c) = 0$.
+- Set $B \definedas O^c$, then $O\supseteq E^c \iff \OO^c \subseteq E \iff B\subseteq E$.
+- Computing measures yields 
 \begin{align*}
 E\setminus B \definedas E\setminus  \OO^c \definedas E\intersect (\OO^c)^c = E\intersect \OO = \OO \intersect(E^c)^c \definedas \OO \setminus E^c
 ,\end{align*}
