+ ‘Real Analysis/UGA Solutions/sections/.temp.pandoc-include’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -122,6 +122,7 @@ O\setminus E
 E\setminus B \definedas E\setminus  \OO^c \definedas E\intersect (\OO^c)^c = E\intersect \OO = \OO \intersect(E^c)^c \definedas \OO \setminus E^c
 ,\end{align*}
   thus $m(E\setminus B) = m(\OO\setminus E^c) = 0$.
+- Since $\OO$ is open, $B$ is closed and thus Borel.
 
 
 ### Direct Proof
