/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -151,7 +151,7 @@ $$
 h_n(x, t) = f(x)
 \left(\frac{\cos(tx) - \cos(t_n x)}{t_n - t}\right) \converges{n\to\infty}\to \dd{}{t} \qty{f(x) \cos(xt)}
 $$
- where the convergence occurs because $\cos(tx)$ is differentiable in $t$.
+ since $\cos(tx)$ is differentiable in $t$ and this is the limit definition of differentiability.
 
 - Note that
 \begin{align*}
