--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -163,7 +163,7 @@ $$
   where $\xi_n \converges{n\to\infty}\to t$ since wlog $t_n \leq \xi_n \leq t$ and $t_n \nearrow t$.
 
 - We then have $$\abs{h_n(x)} = \abs{f(x) x\sin(\xi_n x)} \leq \abs{xf(x)}\quad\text{since } \abs{\sin(\xi_n x)} \leq  1$$ for every $x$ and every $n$.
-- Since $xf(x) \in L^1(\RR)$ by assumption, the DCT can be applied.
+- Since $xf(x) \in L^1(\RR)$ by assumption, the DCT applies. 
 
 ## 4
 
