/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -167,7 +167,27 @@ $$
 
 ## 4
 
-> ???
+- First suppose $f(x) = \chi_{[0, 1]}(x)$.
+- Note that $\sin(nx)$ has a period of $2\pi/n$, and thus $\floor{n\over 2\pi}$ full periods in $[0, 1]$.
+- Taking the absolute value yields a new function with half the period, so a period of $\pi/n$ and $\floor{\pi / n}$ full periods in $[0, 1]$.
+- We can compute the integral over one full period (which is independent of *which* period is chosen), and since $\sin(x)$ is positive and agrees with $\abs{\sin(nx)}$ on the first period, we have
+\begin{align*}
+\int_{\text{One Period}} \abs{\sin(nx)} \, dx 
+&= \int_0^{\pi/n} \sin(nx)\,dx \\
+&= {1\over n} \int_0^\pi \sin(u) \,du \quad u = nx \\
+&= {1\over n} -\cos(u)\mid_0^\pi \\
+&= {2 \over n}
+.\end{align*}
+
+
+- Then break the integral up into integrals over periods $P_1, P_2, \cdots, P_N$ where $N = \floor{n/\pi}$:
+\begin{align*}
+\int_0^1 \abs{\sin(nx)} \, dx 
+&= \qty{ \sum_{j=1}^{N} \int_{P_j} \abs{\sin(nx)} \, dx } +  \int_{N\floor{\pi/n}}^1 \abs{\sin(nx)}\,dx \\
+&= \qty{ \sum_{j=1}^{N} {2\over n} } +  \int_{N\floor{\pi/n}}^1 \abs{\sin(nx)}\,dx \\
+&= N {2\over n} +  \int_{N\floor{\pi/n}}^1 \abs{\sin(nx)}\,dx \\
+&\definedas \floor{\pi \over n} {2\over n} +  \int_{N\floor{\pi/n}}^1 \abs{\sin(nx)}\,dx
+.\end{align*}
 
 Apparently "easy" part: let $f(x) = \chi_{[0, \pi]}$, then $\int_\RR f(x) \abs{\sin(nx)} = \int_0^\pi \abs{\sin(nx)} = 2$, and so $\int_0^1 \abs{\sin(nx)} = \frac 2 \pi$, none of which depend on $n$.
 
