/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -167,6 +167,8 @@ $$
 
 ## 4
 
+Case of characteristic function
+
 - First suppose $f(x) = \chi_{[0, 1]}(x)$.
 - Note that $\sin(nx)$ has a period of $2\pi/n$, and thus $\floor{n\over 2\pi}$ full periods in $[0, 1]$.
 - Taking the absolute value yields a new function with half the period, so a period of $\pi/n$ and $\floor{\pi / n}$ full periods in $[0, 1]$.
@@ -180,19 +182,21 @@ $$
 .\end{align*}
 
 
-- Then break the integral up into integrals over periods $P_1, P_2, \cdots, P_N$ where $N = \floor{n/\pi}$:
+- Then break the integral up into integrals over periods $P_1, P_2, \cdots, P_N$ where $N \definedas \floor{n/\pi}$:
 \begin{align*}
 \int_0^1 \abs{\sin(nx)} \, dx 
 &= \qty{ \sum_{j=1}^{N} \int_{P_j} \abs{\sin(nx)} \, dx } +  \int_{N\floor{\pi/n}}^1 \abs{\sin(nx)}\,dx \\
 &= \qty{ \sum_{j=1}^{N} {2\over n} } +  \int_{N\floor{\pi/n}}^1 \abs{\sin(nx)}\,dx \\
 &= N \qty{2\over n} +  \int_{N\floor{\pi/n}}^1 \abs{\sin(nx)}\,dx \\
 &\definedas \floor{n \over \pi} {2\over n} +  \int_{N\floor{\pi/n}}^1 \abs{\sin(nx)}\,dx \\
-&\definedas {2\over \pi} + \int_{N\floor{\pi/n}}^1 \abs{\sin(nx)}\,dx
-.\end{align*}
+&= {2\over \pi} + \int_{N\floor{\pi/n}}^1 \abs{\sin(nx)}\,dx \\
+&\definedas {2\over \pi} + R(n) 
+\end{align*}
+  so it suffices to show that $R(n) \converges{n\to\infty}\to 0$. \todo{Need to justify removing floor function and cancellation.}
 
-Apparently "easy" part: let $f(x) = \chi_{[0, \pi]}$, then $\int_\RR f(x) \abs{\sin(nx)} = \int_0^\pi \abs{\sin(nx)} = 2$, and so $\int_0^1 \abs{\sin(nx)} = \frac 2 \pi$, none of which depend on $n$.
+- Showing this: ???????????? \todo{No clue how to show this.}
 
-Now approximate $f$ by step functions.
+General case
 
 ## 5
 
