/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -202,4 +202,9 @@ General case
 
 ## 5
 
-> ???
+Concepts used:
+
+- Fubini or Tonelli?
+
+- Set $$E\definedas \theset{(x, t) \in \RR^{n} \cross \RR \suchthat f(x) \geq y}.$$
+- Note that the slice $$E^t \definedas \theset{x\in \RR^n \suchthat (x, t) \in E} = \theset{x\in \RR^n \suchthat f(x)\geq t}$$ is precisely what appears in the RHS integrand.
