/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -208,3 +208,8 @@ Concepts used:
 
 - Set $$E\definedas \theset{(x, t) \in \RR^{n} \cross \RR \suchthat f(x) \geq y}.$$
 - Note that the slice $$E^t \definedas \theset{x\in \RR^n \suchthat (x, t) \in E} = \theset{x\in \RR^n \suchthat f(x)\geq t}$$ is precisely what appears in the RHS integrand.
+- Claim: If $E\subseteq \RR^a \cross \RR^b$ is a measurable set, then for almost every $y\in \RR^b$, the slice $E^y$ is measurable and
+\begin{align*}
+m(E) = \int_{\RR^b} m(E^y) \,dy
+.\end{align*}
+- Claim: for $E$ defined above, $m(E) = \int f$.
